--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.5.0",
+    "async-es": "^2.6.0",
     "aws-sdk": "^2.102.0",
     "chalk": "^2.1.0",
     "cross-spawn": "^5.1.0",
@@ -15,5 +16,28 @@
   },
   "bin": {
     "ep-deploy-s3": "./bin/ep-deploy-s3.js"
+  },
+  "scripts": {
+    "build": "webpack",
+    "release": "npm run build && npm version patch && npm publish"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^3.8.1",
+    "webpack-node-externals": "^1.6.0"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "6.10"
+          }
+        }
+      ]
+    ]
   }
 }
