--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chalk": "^2.1.0",
     "cross-spawn": "^5.1.0",
     "glob-fs": "^0.1.7",
+    "jsonfile": "^4.0.0",
     "s3": "^4.4.0",
     "yargs": "^8.0.2"
   },
